# 4D_trajectory_planning

./: CMakeLists.txt  README.md  package.xml
include/trajectory_planner/: frame_transforms.h
src/lib/: frame_transforms.cpp
src/offboard/: offboard_control.cpp  offboard_control.hpp  planner_spline.h
